<resources>
    <string name="app_name">PitchRight</string>

    <!-- wort -->
    <string name="wort_title">Wort Details</string>
    <string name="wort_targetPitchRate">Target Pitch Rate:</string>
    <string-array name="targetPitchRate_items">
        <item>Ale</item>
        <item>Lager</item>
        <item>Hybrid</item>
        <item>Custom</item>
    </string-array>
    <string name="wort_batchVolume">Batch Volume:</string>
    <string name="wort_originalGravity">Original Gravity:</string>
    <string-array name="volumneUnits_items">
        <item>Gallons</item>
        <item>Litres</item>
    </string-array>
    <string name="wort_cellsRequired">Yeast Cells Needed (billions):</string>

    <!-- yeast -->
    <string name="yeast_title">Yeast Details</string>
    <string name="yeast_initialCellCount">Initial Cell Count (billions):</string>
    <string name="yeast_productionDate">Production Date:</string>
    <string name="yeast_viability">Viability %:</string>
    <string name="yeast_viableCellcount">Viable Cell Count (Billions):</string>

    <!-- starter -->
    <string name="starter_title">Starter Details</string>
    <string name="starter_flaskSize">Flask Size:</string>
    <string-array name="starter_flaskSize_labels">
        <item>500 ml</item>
        <item>1 Litre</item>
        <item>1.5 Litres</item>
        <item>2 Litres</item>
        <item>2.5 Litres</item>
        <item>3 Litres</item>
        <item>3.5 Litres</item>
        <item>4 Litres</item>
        <item>5.5 Litres</item>
        <item>5 Litres</item>
        <item>Custom</item>
    </string-array>
    <string-array name="starter_flaskSize_values">
        <item>.5</item>
        <item>1</item>
        <item>1.5</item>
        <item>2</item>
        <item>2.5</item>
        <item>3</item>
        <item>3.5</item>
        <item>4</item>
        <item>4.5</item>
        <item>5</item>
        <item>0</item>
    </string-array>
    <string name="starter_gravity">Gravity:</string>
    <string name="starter_volume">Volume (Litres):</string>
    <string name="starter_dmeAmount">DME Needed (grams):</string>

    <!-- starter steps -->
    <string name="starter_steps_title">Starter Steps</string>
    <string-array name="starter_step_steps">
        <item>1st Starter Step</item>
        <item>2nd Starter Step</item>
        <item>3rd Starter Step</item>
        <item>4th Starter Step</item>
    </string-array>
    <string name="starter_step_aerationMethod">Aeration Method:</string>
    <string-array name="starter_step_aearation_labels">
        <item>Stir Plate</item>
        <item>Manualy Shaken</item>
        <item>Simple (No Aeration)</item>
    </string-array>
    <string-array name="starter_step_aearation_values">
        <item>STIRPLATE</item>
        <item>MANUAL</item>
        <item>SIMPLE</item>
    </string-array>
    <string name="starter_step_starterVolume">Starter Volume (Litres):</string>
    <string name="starter_step_inoculationRate">Inoculation Rate (millions/ml):</string>
    <string name="starter_step_cellsCreated">New Cells Created (billions):</string>
    <string name="starter_step_totalCells">Total Cells:</string>
    <string name="starter_step_growthFactor">Growth Factor:</string>

    <!-- help -->
    <string name="help_wort_targetPitchRate"><![CDATA[<h3>Target Pitch Rate</h3>The number of cells of yeast you will need depends on the type of beer you are brewing.<br/><br/>
        Ales need around .75 million of cells yeast, per ml of wort, per degree plato.Lagers need double this amount (1.5 million cells per ml of wort, per degree plato), and hybrid beers are in the middle (1 million cells per ml of wort, per degree plato).<br/><br/>
        Alternately, you may enter a custom pitch rate here.]]></string>
    <string name="help_wort_batchVolume"><![CDATA[<h3>Batch Volume</h3>The amount of beer you are formating.]]></string>
    <string name="help_wort_originalGravity"><![CDATA[<h3>Specific Gravity (SG)</h3>The specific gravity of your wort.  The higher this number, the more yeast cells you will need.]]></string>
    <string name="help_wort_cellsRequired"><![CDATA[<h3>Yeast Cells Needed (Billions)</h3>The total number of cells that you need, based upon your type of fermentation (ale, lager, hybrid), your batch size, and your original gravity.<br><Br>If you elected to overbuild your starter in order to harvest some yeast for a future brew, those additional cells will be included in this number.]]></string>

    <string name="help_yeast_initialCellCount"><![CDATA[<h3>Initial Cell Count (Billions)</h3>TODO.]]></string>
    <string name="help_yeast_productionDate"><![CDATA[<h3>Production Date</h3>TODO.]]></string>
    <string name="help_yeast_viability"><![CDATA[<h3>Viability</h3>TODO.]]></string>
    <string name="help_yeast_viableCellCount"><![CDATA[<h3>Viabile Cell Count (Billions)</h3>TODO.]]></string>

    <string name="help_starter_flaskSize"><![CDATA[<h3>Flask Size (Litres)</h3>TODO.]]></string>
    <string name="help_starter_gravity"><![CDATA[<h3>Gravity</h3>TODO.]]></string>
    <string name="help_starter_volume"><![CDATA[<h3>Volume (Litres)</h3>TODO.]]></string>
    <string name="help_starter_dmeNeededy"><![CDATA[<h3>DME Needed (grams)</h3>TODO.]]></string>

</resources>
